--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:rgRwjA/D0ro9+o5rKoro33LD0ig4RDX0RfeqIm+pQw4=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
